# bowling-cplusplus

./: CMakeLists.txt  main.cpp
src/: BowlingEngine.cpp  BowlingEngine.h
tests/: tests.cpp
